# candle-mi

./: BACKENDS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  HOOKS.md  README.md  ROADMAP.md
design/: candle-version.md  error-handling.md  hook-overhead.md  hook-system.md  intervention-api.md  rwkv7-effective-attention.md
docs/audit/: CONSISTENCY_AUDIT.md  examples_coverage_audit.md
examples/: README.md  activation_patching.rs  attention_knockout.rs  attention_patterns.rs  attention_routing.rs  auto_config_dogfood.rs  character_count_helix.rs  generate.rs  logit_lens.rs  quick_start_sae.rs  recurrent_feedback.rs  rwkv_inference.rs  steering_convergence.rs  steering_dose_response.rs
examples/figure13/: Sans titre-1.nb  recurrent_feedback_plot.wl
examples/results/activation_patching/: causal_trace_plot.wl
examples/results/attention_knockout/: gemma-2-2b.json  llama-3.2-1b.json  starcoder2-3b.json
examples/results/attention_routing/: README.md
examples/results/character_count_helix/: helix_plot.wl
examples/results/character_count_helix/texts/: CHAPTER I.Five Years Later.txt  CHAPTER I.The Period.txt  CHAPTER II.A Sight.txt  CHAPTER II.The Mail.txt  CHAPTER III.A Disappointment.txt  CHAPTER III.The Night Shadows.txt  CHAPTER IV.Congratulatory.txt  CHAPTER IV.The Preparation.txt  CHAPTER V.The Wine-shop.txt  CHAPTER VI.The Shoemaker.txt
examples/results/recurrent_feedback/: prefill.json  sustained.json
examples/results/steering_convergence/: README.md  batch_rhyme_groups.json
examples/results/steering_convergence/batch_llama/: air.json  ake.json  all.json  ame.json  and.json  ay.json  ee.json  est.json  ight.json  ine.json  ing.json  ire.json  old.json  oon.json  ore.json  orn.json  ound.json  ove.json  ow.json  own.json
scripts/: README.md  anacrousis_reference.json  clt_position_sweep_comparison.md  clt_position_sweep_reference.json  clt_position_sweep_validation.py  sae_reference.json  sae_validation.py
src/: backend.rs  config.rs  download.rs  hooks.rs  lib.rs  memory.rs
src/cache/: kv.rs
src/clt/: mod.rs
src/interp/: logit_lens.rs
src/sae/: mod.rs  npz.rs
src/tokenizer/: mod.rs
src/transformer/: attention.rs  mod.rs  recurrent.rs
src/util/: masks.rs  mod.rs  pca.rs
tests/: fast_download.rs  validate_anacrousis.rs  validate_models.rs  validate_sae.rs
