[package]
name = "candle-mi"
version = "0.0.5"
edition = "2024"
authors = ["Eric Jacopin"]
description = "Mechanistic interpretability for language models in Rust, built on candle"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PCfVW/candle-mi"
keywords = ["interpretability", "transformers", "mechanistic", "candle", "rust"]
categories = ["science"]
rust-version = "1.87"

[dependencies]
# Candle ML framework (pinned to 0.9.x per design/candle-version.md)
candle-core = "0.9"
candle-nn = "0.9"

# HuggingFace integration
tokenizers = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# Error handling (typed MIError per design/error-handling.md)
thiserror = "2"
anyhow = "1.0"

# Random number generation
rand = "0.8"

# Statistics
statrs = "0.17"

# Logging
tracing = "0.1"

# NPZ/ZIP parsing (for Gemma Scope SAE weights)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Model downloads (hf-fetch-model wraps hf-hub v0.5)
hf-fetch-model = { version = "0.7.2", features = ["indicatif"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Optional: probing
ndarray = { version = "0.15", optional = true }
linfa = { version = "0.7", optional = true }
linfa-logistic = { version = "0.7", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
serial_test = "3.4.0"
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"

# Integration tests — each gated behind its feature so `cargo test --features X`
# only compiles the tests that use feature X.
[[test]]
name = "validate_models"
required-features = ["transformer"]

[[test]]
name = "bench_hook_overhead"
required-features = ["transformer"]

[[test]]
name = "validate_rwkv6"
required-features = ["rwkv", "rwkv-tokenizer"]

[[test]]
name = "validate_rwkv7"
required-features = ["rwkv", "rwkv-tokenizer"]

[[test]]
name = "validate_clt"
required-features = ["clt", "transformer"]

[[test]]
name = "validate_anacrousis"
required-features = ["transformer"]

[[test]]
name = "validate_sae"
required-features = ["sae", "transformer"]

# Examples — gated behind features to avoid compilation errors when
# features are not enabled.
[[example]]
name = "quick_start_sae"
required-features = ["sae", "transformer"]

[[example]]
name = "figure13_planning_poems"
required-features = ["clt", "transformer"]

[[example]]
name = "generate"
required-features = ["transformer"]

[[example]]
name = "logit_lens"
required-features = ["transformer"]

[features]
default = ["cuda", "transformer"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
transformer = []
mmap = []
rwkv = []
rwkv-tokenizer = []
clt = []
sae = []
probing = ["linfa", "linfa-logistic", "ndarray"]

[lints.rust]
# unsafe_code is controlled via cfg_attr in lib.rs (forbid by default, deny with mmap)
elided_lifetimes_in_paths = "deny"     # Rule 1
missing_docs              = "warn"     # Rule 12 prerequisite

[lints.clippy]
# Rule 3: No panics or indexing in library code
unwrap_used               = "deny"
expect_used               = "deny"
panic                     = "deny"
indexing_slicing           = "deny"

# Rule 7: Exhaustive matching
wildcard_enum_match_arm             = "deny"
match_wildcard_for_single_variants  = "deny"

# Rule 11: #[non_exhaustive] policy (forces a decision on every public enum)
exhaustive_enums          = "warn"

# Rule 2: Explicit conversions (warn only — numeric casts need annotation, not prohibition)
as_conversions            = "warn"
cast_possible_truncation  = "warn"
cast_precision_loss       = "warn"
cast_sign_loss            = "warn"

# Rule 9: Prefer iterators (warn only — recurrent algorithms need explicit exemption)
explicit_iter_loop        = "warn"
manual_filter_map         = "warn"
manual_find_map           = "warn"
needless_range_loop       = "warn"

# Documentation
missing_docs_in_private_items = "warn"
missing_errors_doc        = "warn"
missing_panics_doc        = "warn"

# General pedantic + nursery quality baseline
pedantic  = { level = "warn", priority = -1 }
nursery   = { level = "warn", priority = -1 }

# Suppressed lints that are too noisy for this domain
module_name_repetitions   = "allow"
too_many_lines            = "allow"
must_use_candidate        = "warn"      # Rule 17

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
